# qr-cli

./: Cargo.toml
src/: main.rs
