[package]
name = "qr-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["blocking"] }
rqrr = "0.6.0"
