[package]
name = "qr-reader"
version = "0.1.0"
edition = "2021"
authors = ["kaoru <@901597854274052106>"]
description = "A qrcode reader that prints out the data of the qrcode"
repository = "https://github.com/kaorlol/qr-reader"
license = "MIT"
keywords = ["qr", "qrcode", "reader", "qrcode-reader"]

[badges]
github = { repository = "kaorlol/qr-reader" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
clap = { version = "4.4.7", features = ["derive"] }
image = "0.24.7"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
rqrr = "0.6.0"
